<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:id="@+id/titre_screen_aide"
        android:paddingTop="10dp"
        android:paddingBottom="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titreaide"
            android:id="@+id/textView7"
            android:autoLink="none"
            android:elegantTextHeight="true"
            android:paddingLeft="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#00ad63"
            android:layout_alignBottom="@+id/textView7" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/titre_screen_aide">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:scrollIndicators="right"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/titre_ajouter_un_patient"
                        android:id="@+id/textView8"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/descr_ajouter_patient"
                        android:id="@+id/textView11"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#00ad63"
                    android:id="@+id/textView14" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/titre_ajouter_un_membre"
                        android:id="@+id/textView12"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/desc_ajouter_membre"
                        android:id="@+id/textView13"
                        android:textAlignment="viewStart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/attention"
                        android:id="@+id/textView15"
                        android:paddingLeft="20dp"
                        android:textColor="#ff0000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/att_ajouter_membre"
                        android:id="@+id/textView16"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#00ad63"
                    android:id="@+id/textView17" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/prise_photo_t"
                        android:id="@+id/textView23"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/prise_photo_d"
                        android:id="@+id/textView24"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#00ad63"
                    android:id="@+id/textView22" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/calibrage_t"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/calibrage_d"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#00ad63"
                    android:id="@+id/textView25" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/method_t"
                        android:id="@+id/textView26"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/method_d"
                        android:id="@+id/textView27"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#00ad63"
                    android:id="@+id/textView28" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/minuteur_t"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/minuteur_d"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#00ad63"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/galerie_t"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/galerie_d"
                        android:textAlignment="viewStart"
                        android:paddingBottom="5dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>